# jaffle-shop-nasa

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluffignore  README.md  dbt_project.yml  dependencies.yml  docker-compose.yml  package-lock.yml  profiles.yml  pyproject.toml
data-tests/: .gitignore
docker-compose/dockerfile/: dbt  superset
docker-compose/entrypoint/: dbt  superset
docker-compose/superset/: requirements.in  requirements.txt
docker-compose/volume/: .gitignore
jaffle-data/: raw_customers.csv  raw_stores.csv
macros/: generate_schema_name.sql
models/marts/: customers.yml  order_items.yml  orders.yml
models/staging/: __sources.yml  stg_locations.sql  stg_locations.yml  stg_orders.sql
seeds/: properties.yml
